# oop-python

./: decorators_staticmethod_classmethod.ipynb  property_setters_getters.ipynb  pyproject.toml
