[tool.poetry]
name = "oop-python"
version = "0.1.0"
description = ""
authors = ["Cloves Paiva <cloves.paiva@extremedigital.com.br>"]
readme = "README.md"
packages = [{include = "oop_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
